RESOLVED FIXED168438
[WebRTC][Mac][WebKit2] Initial WebProcess does not support WebRTC
https://bugs.webkit.org/show_bug.cgi?id=168438
Summary [WebRTC][Mac][WebKit2] Initial WebProcess does not support WebRTC
Brent Fulgham
Reported 2017-02-16 08:59:57 PST
The current sandbox expansion for WebRTC does not take effect until the second WebProcess is created, causing the initial browser tab to lack microphone support.
Attachments
Brent Fulgham
Comment 1 2017-02-16 09:00:27 PST
This is a chunk of a larger patch, split off to allow easier tracking.
Brent Fulgham
Comment 2 2017-02-16 09:25:02 PST
Brent Fulgham
Comment 3 2017-02-16 10:11:56 PST
Note You need to log in before you can comment on or make changes to this bug.