[WebRTC][Mac][WebKit2] Initial WebProcess does not support WebRTC https://bugs.webkit.org/show_bug.cgi?id=168438 <rdar://problem/30401818>

Reviewed by Youenn Fablet.

The sandbox extension for microphone access does not take effect until the second WebProcess
is created, causing the initial browser tab to lack microphone support.

This patch checks the setting earlier in the boot process so that the initial WebProcess
instance gets the correct setting.

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess): Move microphone sandbox extension here, so that the
initial WebProcess has the correct microphone access.
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createNewWebProcess): Move microphone sandbox extension from here to platform-specific file.
(WebKit::WebProcessPool::createWebPage): Remove unneeded preference checks.


Canonical link: https://commits.webkit.org/185459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212443 268f45cc-cd09-0410-ab3c-d52691b4dbfc